3.8/arangosearch-examples.md
---
layout: default
description: View and Analyzer usage examples
title: ArangoSearch Examples
redirect_from:
  - views-arango-search-getting-started.html # 3.4 -> 3.5
---
# ArangoSearch Examples

This is a collection of usage examples to demonstrate the power of
ArangoSearch Views
{:class="lead"}

To try out the examples for yourself, download the
[IMDB movie dataset](https://github.com/arangodb/example-datasets/tree/master/Graphs/IMDB/dump){:target="_blank"}
files and use [arangorestore](programs-arangorestore.html) to restore the
dump to an ArangoDB server. Furthermore, create a View called `imdb`.

## Matching exact values

If you want to find strictly equal values, then the `identity` is what you need.
It will not apply any transformation.

**View definition:**

```json
{
  "links": {
    "imdb_vertices": {
      "fields": {
        "title": {
          "analyzers": [
            "identity"
          ]
        }
      }
    }
  }
}
```

**AQL query** to match exact movie title (case-sensitive, full string):

```js
FOR doc IN imdb
  SEARCH ANALYZER(doc.title == "The Matrix", "identity")
  RETURN doc.title
```

Match multiple titles using `OR`:

```js
FOR doc IN imdb
  SEARCH ANALYZER(doc.title == "The Matrix" OR doc.title == "The Matrix Reloaded", "identity")
  RETURN doc.title
```

Match multiple titles using `IN`:

```js
FOR doc IN imdb
  SEARCH ANALYZER(doc.title IN ["The Matrix", "The Matrix Reloaded"], "identity")
  RETURN doc.title
```

## Prefix search

If you want to search for text that starts with a certain string, then the the
`identity` is sufficient. However, only the original capitalization will match
(case-sensitive).

**View definition:**

```json
{
  "links": {
    "imdb_vertices": {
      "fields": {
        "title": {
          "analyzers": [
            "identity"
          ]
        }
      }
    }
  }
}
```

**AQL query** to match all titles that start with `"The Matri"`:

```js
FOR doc IN imdb
  SEARCH ANALYZER(STARTS_WITH(doc.title, "The Matr"), "identity")
  RETURN doc.title
```

## Case-insensitive search

**Create an Analyzer** to normalize case to all lowercase and to remove diacritics
in arangosh:

```js
//db._useDatabase("your_database"); // Analyzer will be created in current database
var analyzers = require("@arangodb/analyzers");
analyzers.save("norm_en", "norm", { locale: "en_US.utf-8", accent: false, case: "lower" }, [])
```

**View definition:**

```json
{
  "links": {
    "imdb_vertices": {
      "fields": {
        "title": {
          "analyzers": [
            "norm_en"
          ]
        }
      }
    }
  }
}
```

**AQL query** to match movie title, ignoring capitalization and using the base
characters instead of accented characters (full string):

```js
FOR doc IN imdb
  SEARCH ANALYZER(doc.title == "thé mäTRïX", "norm_en")
  RETURN doc.title
```

AQL query to match a title prefix (case-insensitive):

```js
FOR doc IN imdb
  SEARCH ANALYZER(STARTS_WITH(doc.title, "the matr"), "norm_en")
  RETURN doc.title
```

## Wildcard search

**View definition:**

```json
{
  "links": {
    "imdb_vertices": {
      "fields": {
        "title": {
          "analyzers": [
            "identity"
          ]
        }
      }
    }
  }
}
```

**AQL query** to match all titles that starts with `The Matr` using `LIKE()`,
where `_` stands for a single wildcard character and `%` for an arbitrary amount:

```js
FOR doc IN imdb
  SEARCH ANALYZER(LIKE(doc.title, "The Matr%"), "identity")
  RETURN doc.title
```

Match all titles that contain `%Mat%"` using `LIKE()`:

```js
FOR doc IN imdb
  SEARCH ANALYZER(LIKE(doc.title, "%Mat%"), "identity")
  RETURN doc.title
```

<!--
## Fuzzy search


View Configuration and Search
-----------------------------

Assume the following collections were initially defined in a database using
the following arangosh commands:

```js
c0 = db._create("ExampleCollection0");
c1 = db._create("ExampleCollection1");

c0.save({ i: 0, name: "full", text: "是一个 多模 型数 据库" });
c0.save({ i: 1, name: "half", text: "是一个 多模" });
c0.save({ i: 2, name: "other half", text: "型数 据库" });
c0.save({ i: 3, name: "quarter", text: "是一" });

c1.save({ i: 4, a: "foo", b: "bar" });
c1.save({ i: 5, a: "foo", b: "baz" });
c1.save({ i: 6, a: "bar", b: "foo" });
c1.save({ i: 7, a: "baz", b: "foo" });
```

A View with default parameters can be created by calling `db._createView()`
(see [JavaScript Interface for Views](data-modeling-views.html)):

```js
v0 = db._createView("ExampleView", "arangosearch", {});
```

Then link the collections to the View, define which properties shall be indexed
and with which Analyzers the values are supposed to be processed:

```js
v0 = db._view("ExampleView");
v0.properties({
    links: {
      /* collection Link 0 with additional custom configuration: */
      'ExampleCollection0':
      {
        /* examine fields of all linked collections,
           using default configuration: */
        includeAllFields: true,
        fields:
        {
          /* a field to apply custom configuration
             that will index English text: */
          name:
          {
            analyzers: ["text_en"]
          },
          /* another field to apply custom configuration
             that will index Chinese text: */
          text:
          {
            analyzers: ["text_zh"]
          }
        }
      },
      /* collection Link 1 with custom configuration: */
      'ExampleCollection1':
      {
        /* examine all fields using default configuration: */
        includeAllFields: true,
        fields:
        {
          a:
          {
            /* a field to apply custom configuration
                that will index English text: */
            analyzers: ["text_en"]
          }
        }
      }
    }
  }
);
```

You have to wait a few seconds for the View to update its index.
Then you can query it:

```js
db._query(`FOR doc IN ExampleView
  SEARCH PHRASE(doc.text, "型数 据库", "text_zh") OR
  ANALYZER(STARTS_WITH(doc.b, "ba"), "text_en")
  SORT TFIDF(doc) DESC
  RETURN doc`);
```

The result will include all documents from both linked collections that have
the Chinese phrase `多模 型数` at any position in the `text` attribute value
**or** the property `b` starting with `ba` in English. Additionally,
descendant sorting using the TF-IDF scoring algorithm will be applied.

```json
[
  {
    "_key" : "120",
    "_id" : "ExampleCollection0/120",
    "_rev" : "_XPoMzCi--_",
    "i" : 0,
    "name" : "full",
    "text" : "是一个 多模 型数 据库"
  },
  {
    "_key" : "124",
    "_id" : "ExampleCollection0/124",
    "_rev" : "_XPoMzCq--_",
    "i" : 2,
    "name" : "other half",
    "text" : "型数 据库"
  },
  {
    "_key" : "128",
    "_id" : "ExampleCollection1/128",
    "_rev" : "_XPoMzCu--_",
    "a" : "foo",
    "b" : "bar",
    "i" : 4
  },
  {
    "_key" : "130",
    "_id" : "ExampleCollection1/130",
    "_rev" : "_XPoMzCy--_",
    "a" : "foo",
    "b" : "baz",
    "i" : 5
  }
]
```

Use cases
---------

### Prefix search

The data contained in our View looks like that:

```json
{ "id": 1, "body": "ThisIsAVeryLongWord" }
{ "id": 2, "body": "ThisIsNotSoLong" }
{ "id": 3, "body": "ThisIsShorter" }
{ "id": 4, "body": "ThisIs" }
{ "id": 5, "body": "ButNotThis" }
```

We now want to search for documents where the attribute `body` starts with
`"ThisIs"`. A simple AQL query executing this prefix search:

```js
FOR doc IN viewName
  SEARCH STARTS_WITH(doc.body, 'ThisIs')
  RETURN doc
```

It will find the documents with the ids `1`, `2`, `3`, `4`, but not `5`.

-->